added all of the cards for the categories, a couple more minor touch ups and the launch page will be good to go

--- a/arcadia-appeal-clothing-store/src/components/Categories/categories.css
+++ b/arcadia-appeal-clothing-store/src/components/Categories/categories.css
@@ -1,3 +1,14 @@
 h1 {
     color:black;
 }
+
+.row1 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    }
+
+.cardMargin {
+    margin: 15px;
+}
